--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -323,6 +323,17 @@
     "selection": "Selection",
     "iframe": "IFrame"
   },
+  "elementProperties": {
+    "title": "Element Properties",
+    "selectElement": "Select an element to view its properties",
+    "position": "Position",
+    "size": "Size",
+    "rotation": "Rotation",
+    "opacity": "Opacity",
+    "strokeColor": "Stroke Color",
+    "backgroundColor": "Background Color",
+    "strokeWidth": "Stroke Width"
+  },
   "headings": {
     "canvasActions": "Canvas actions",
     "selectedShapeActions": "Selected shape actions",
@@ -640,5 +651,33 @@
     },
     "itemNotAvailable": "Command is not available...",
     "shortcutHint": "For Command palette, use {{shortcut}}"
+  },
+  "animation": {
+    "positionSettings": "Position Settings",
+    "selectElementToAnimate": "Select an element to animate",
+    "currentTime": "Current Time",
+    "addKeyframe": "Add Keyframe",
+    "position": "Position",
+    "rotation": "Rotation",
+    "scale": "Scale",
+    "opacity": "Opacity",
+    "strokeColor": "Stroke Color",
+    "backgroundColor": "Background Color",
+    "strokeWidth": "Stroke Width",
+    "timeline": "Timeline",
+    "hideTrack": "Hide Track",
+    "showTrack": "Show Track",
+    "unlockTrack": "Unlock Track",
+    "lockTrack": "Lock Track",
+    "duration": "Duration",
+    "playbackRate": "Playback Rate",
+    "showTimeline": "Show Timeline",
+    "hideTimeline": "Hide Timeline",
+    "play": "Play",
+    "pause": "Pause",
+    "stop": "Stop",
+    "loop": "Loop",
+    "expand": "Expand",
+    "collapse": "Collapse"
   }
 }
